fixed alignment when zoomed out

--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,7 @@
 body {
 	background-color: #2A3663;
 	padding-top: 57px;
-
+	text-align: center;
 	* {
 		font-family: 'Raleway', sans-sarif;
 	}
@@ -125,8 +125,6 @@ img {
 }
 
 .img-fluid {
-	/*	margin-left needs to be half of max-width for it to be centered */
-	margin-left: 12.5%;
 	max-width: 75%;
 	height: auto;
 }
